# dbcreds

./: CLAUDE.md  Makefile  README.html  README.md  apply_lazy_loading.py  generate_startup_md.py  hello.py  mkdocs.yml  pyproject.toml  pytest.ini  security_improvements_plan.md  start_up.md  test_fix.py  unify_web_theme.py  update_docs.py  update_styles.py
.claude/: settings.local.json
.github/workflows/: deploy-docs.yml  tests.yml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/api/backends/: index.html
0.1/api/cli/: index.html
0.1/examples/async/: index.html
0.1/examples/basic/: index.html
0.1/examples/pandas/: index.html
0.1/getting-started/quickstart/: index.html
0.1/guide/backends/: index.html
0.1/includes/: install-command.txt
0.1/includes/cli-examples/: index.html
0.1/includes/development/: index.html
0.1/includes/installation-basic/: index.html
0.1/includes/installation-tabs/: index.html
0.1/includes/python-examples/: index.html
0.1/javascripts/: extra.js
0.1/security/best-practices/: index.html
0.1/stylesheets/: extra.css
backup_20250531_140359/: LICENSE  add-dbcreds-features.ps1  add_dbcreds_features.py  generate_startup_md.py  pyproject.toml  start_up.md
backup_20250531_140359/dbcreds/: __init__.py  cli.py  migrate.py
backup_20250531_140359/dbcreds/backends/: base.py  config.py  environment.py
backup_20250531_140359/dbcreds/core/: exceptions.py  models.py  security.py
backup_20250531_140359/dbcreds/utils/: __init__.py  shortcuts.py
backup_20250531_140359/dbcreds/web/: __main__.py  auth.py  errors.py  main.py
dbcreds/: __init__.py  __init__.py.backup.20250602_164416  export_fast.py  fast.py  migrate.py
dbcreds/backends/: __init__.py  gpg.py  keyring.py  legacy_windows.py  windows.py
dbcreds/core/: __init__.py  audit.py  clipboard.py  exceptions.py  manager.py  models.py  security.py
dbcreds/utils/: shortcuts.py  shortcuts.py.backup.20250602_164416
dbcreds/web/: __init__.py  __main__.py  auth.py  main.py  security_config.py
dbcreds/web/templates/: base.html  index.html  settings.html
docs/: index.md
docs/api/: backends.md  cli.md  core.md  web.md
docs/examples/: async.md  basic.md  marimo.md  pandas.md  sqlalchemy.md
docs/getting-started/: configuration.md  installation.md  performance.md  quickstart.md
docs/guide/: backends.md  cli.md  migration.md  python-api.md  rotation.md  web-interface.md
docs/includes/: cli-examples.md  development.md  features-list.md  installation-basic.md  installation-full.md  installation-tabs.md  key-features.md  python-examples.md  quickstart.md
docs/security/: backends.md  best-practices.md
docs/stylesheets/: extra.css
examples/: db_health_check.py  etl_script.py  multi_db_query.py
scripts/: create_docs.py  create_snippets.py  fix_missing_expiry.py  generate_startup_md.py  migrate_timezones.py  sync_readme.py
site/: 404.html  build-and-deploy.ps1  index.html  objects.inv  sitemap.xml
site/api/backends/: index.html
site/api/cli/: index.html
site/javascripts/: extra.js
site/search/: search_index.json
site/stylesheets/: extra.css
tests/: conftest.py
tests/test_core/: test_manager.py  test_models.py
(+31 files in other folders)
